# test-github-actions

./: .gitignore  CMakeLists.txt  README.md  build.sh  config.h.in  configure.sh  main.cpp  run.sh
.github/workflows/: main.yml
Filer/: CMakeLists.txt  filer.cpp  filer.hpp
